--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             text-align: center;
         }
         #intro-text, #contact, #post-list-container {
-            max-width: 800px; /* Optional: Set max-width to limit the width */
+            max-width: 800px;
             margin: 20px auto;
-            text-align: center; /* Center the text inside the divs */
+            text-align: center; 
         }
 
         .post-list {
