--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             padding: 20px;
             background-color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            border-radius: 30px;
         }
 
         h1 {
@@ -57,9 +58,9 @@
 
         #contact a {
             display: inline-block;
-            margin: 0 15px; /* Adds space between the links */
+            margin: 0 15px; 
             text-decoration: none;
-            color: blue; /* Optional: Adds default link color */
+            color: blue; 
         }        
 
         .post {
@@ -101,14 +102,14 @@
         <div id="intro-text">
             <h2>About me</h2>
             <ul>
-                <li>Living in the FoodFalley in The Netherlands</li>
-                <li>Data Engineering Tech Lead at data consultancy firm Hot ITem in Amsterdam</li>
+                <li>Living in the middle of The Netherlands</li>
+                <li>Data Engineering Tech Lead at boutique data consultancy firm Hot ITem in Amsterdam</li>
                 <li>Like to scuba dive, weightlift, swim and read when I'm offline (not all at once)</li>
             </ul>
             <h2>Interests</h2>
             <ul>
                 <li>Cloud solution design for data platforms</li>
-                <li>Open source data tooling (getting locked into paying license fees isn't always best outcome..)</li>
+                <li>Open source data tooling (getting locked into paying license fees isn't always the best outcome..)</li>
                 <li>Politics (active member of the Dutch Liberal Party for 10+ years)</li>
                 <li>Books about data / tech / politics / economics</li>
             </ul>
