--- a/index.html
+++ b/index.html
@@ -97,21 +97,14 @@
 
 <body>
     <div class="container">
-        <h1>Walther David Timmer</h1>
+        <h1>Walther D. Timmer</h1>
 
         <div id="intro-text">
             <h2>About me</h2>
             <ul>
                 <li>Living in the middle of The Netherlands</li>
-                <li>Data Engineering Tech Lead at boutique data consultancy firm Hot ITem in Amsterdam</li>
-                <li>Like to scuba dive, weightlift, swim and read when I'm offline (not all at once)</li>
-            </ul>
-            <h2>Interests</h2>
-            <ul>
-                <li>Cloud solution design for data platforms</li>
-                <li>Open source data tooling (getting locked into paying license fees isn't always the best outcome..)</li>
-                <li>Politics (active member of the Dutch Liberal Party for 10+ years)</li>
-                <li>Books about data / tech / politics / economics</li>
+                <li>Doing data engineering and cloud engineering on Azure cloud for work</li>
+                <li>Like to scuba dive, weightlift, swim, talk about politics and read when I'm offline</li>
             </ul>
         </div>
 
