--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div id="intro-text">
             <h2>Over mij</h2>
             <ul>
-                <li>Ik woon min of meer in het midden van het land.</li>
-                <li>Dagelijks tijdens werk bezig met data- en cloud-engineering. En vast ook heel veel meetings.</li>
-                <li>Mijn interessen liggen bij duiken, gewichtheffen, politiek en het lezen van politiek/technische boeken.</li>
+                <li>Ik woon in het oosten van provincie Utrecht en voot werk en privé veelal in Utrecht stad.</li>
+                <li>Dagelijks in mijn werk ben ik bezig met data- en cloud-engineering. Voorheen deed ik dit vanuit consultancy maar tegenwoordig voor de Rijksdienst voor Ondernemend Nederland. De dienst verzorgt meer dan 1600 regelingen voor diverse ministeries en andere opdrachtgevers als Europa.</li>
+                <li>Mijn interessen liggen bij duiken, gewichtheffen, politiek en het lezen van politiek- en technische-boeken.</li>
             </ul>
         </div>
 
