--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="intro-text">
             <h2>Over mij</h2>
             <ul>
-                <li>Ik woon in het oosten van provincie Utrecht en voot werk en privé veelal in Utrecht stad.</li>
+                <li>Ik woon in het oosten van provincie Utrecht en voor werk en privé ben ik veelal in Utrecht stad.</li>
                 <li>Dagelijks in mijn werk ben ik bezig met data- en cloud-engineering. Voorheen deed ik dit vanuit consultancy maar tegenwoordig voor de Rijksdienst voor Ondernemend Nederland. De dienst verzorgt meer dan 1600 regelingen voor diverse ministeries en andere opdrachtgevers als Europa.</li>
                 <li>Mijn interessen liggen bij duiken, gewichtheffen, politiek en het lezen van politiek- en technische-boeken.</li>
             </ul>
