--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <ul>
                 <li>Ik woon in het oosten van provincie Utrecht en voor werk en privé ben ik veelal in Utrecht stad.</li>
                 <li>Dagelijks in mijn werk ben ik bezig met data- en cloud-engineering. Voorheen deed ik dit vanuit consultancy maar tegenwoordig voor de Rijksdienst voor Ondernemend Nederland. De dienst verzorgt meer dan 1600 regelingen voor diverse ministeries en andere opdrachtgevers als Europa.</li>
-                <li>Mijn interessen liggen bij duiken, gewichtheffen, politiek en het lezen van politiek- en technische-boeken.</li>
+                <li>Mijn interesses liggen bij duiken, gewichtheffen, politiek en het lezen van politiek- en technische-boeken.</li>
+                 <li>In mijn vrije tijd ben ik al meer dan tien jaar actief als bestuurslid en diverse rollen voor de VVD. Daarnaast ben ik sinds een paar jaar actief als bestuurslid voor een duikvereniging.</li>
             </ul>
         </div>
 
